# InscriptionClaude

./: .gitignore  AIR_GAPPED.md  Build-Bundle.bat  Build-Bundle.sh  CHANGELOG.md  InscriptionClaude.code-workspace  README.md  SETUP.md  build.ps1  build.sh  pyproject.toml
.github/workflows/: ci.yml
caseforge/: README.md  pyproject.toml
caseforge/packaging/: caseforge.spec
caseforge/scripts/: dev.ps1  dev.sh
caseforge/src/caseforge/: __init__.py  __main__.py  app.py  config.py  inscription_sessions.py  launcher.py  logging_setup.py  model.py  paths.py  storage.py  templates.py  version.py
caseforge/src/caseforge/report/: __init__.py  cli.py  context.py  render.py  suggestions_reader.py
caseforge/src/caseforge/ui/: __init__.py  app_icon.py  case_view.py  controller.py  custody_tab.py  main_window.py  new_case_dialog.py  onboarding_dialog.py  recents_delegate.py  sessions_view.py  settings_dialog.py  style.py  welcome.py  widgets.py
caseforge/tests/: conftest.py  test_app_args.py  test_inscription_sessions.py  test_launcher.py  test_main_window.py  test_onboarding_dialog.py  test_report.py  test_storage.py  test_templates.py
caseguide/: README.md  pyproject.toml
caseguide/packaging/: caseguide.spec
caseguide/scripts/: dev.ps1  dev.sh
caseguide/src/caseguide/: __init__.py  __main__.py  app.py  case_reader.py  config.py  generator.py  logging_setup.py  markdown_export.py  model.py  paths.py  playbooks.py  storage.py  version.py
caseguide/src/caseguide/llm/: __init__.py  augment.py  client.py  prompt.py
caseguide/src/caseguide/playbook_data/: _README.md  autopsy-ci-processing.json  autopsy-keyword-tagging.json  autopsy-timeline-analysis.json  axiom-ci-processing.json  axiom-timeline-analysis.json  cellebrite-mobile-analysis.json  cellebrite-mobile-extraction.json  chain-of-custody-intake.json  csam-hash-set-verification.json  memory-image-acquisition.json  mru-folder-access.json  verify-image-hash.json  xways-rvs-processing.json
caseguide/src/caseguide/ui/: __init__.py  app_icon.py  controller.py  main_window.py  refine_dialog.py  scope_panel.py  settings_dialog.py  style.py  suggestion_delegate.py  suggestions_panel.py  widgets.py
caseguide/tests/: test_case_reader.py  test_config.py  test_generator.py  test_llm.py  test_main_window.py  test_markdown_export.py  test_panels.py  test_playbooks.py  test_storage.py
inscription/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
inscription/.github/workflows/: ci.yml
inscription/docs/: README.md  architecture.md  integration.md  phase1-plan.md
inscription/packaging/: inscription.spec
inscription/scripts/: dev.sh
inscription/src/inscription/: __init__.py  app.py  caseguide_link.py  config.py  logging_setup.py  model.py  paths.py  render.py  util.py  verify.py  version.py
inscription/src/inscription/capture/: __init__.py  click_source.py  engine.py  events.py  hotkey_source.py  keyboard_source.py  marker_source.py  repository_sink.py  scroll_source.py  session_sink.py  window_source.py
inscription/src/inscription/caseguide_link/: __init__.py  reader.py
inscription/src/inscription/cases/: __init__.py  models.py  slug.py
inscription/src/inscription/export/: __init__.py  _common.py  forensic.py  html.py  markdown.py  pdf.py
inscription/src/inscription/llm/: __init__.py  client.py  prompt.py  rewriter.py
inscription/src/inscription/platform/: __init__.py  capabilities.py  foreground.py  hotkeys.py  screen.py  version.py
inscription/src/inscription/resolve/: __init__.py  base.py  uia.py
inscription/src/inscription/steps/: __init__.py  _dedup.py  generator.py  live.py
inscription/src/inscription/storage/: __init__.py  _rowmap.py  errors.py  locking.py  manifest.py  repository.py  schema.py  slug.py  submitted.py
inscription/src/inscription/ui/: app_icon.py  case_list_dialog.py  case_workspace.py  controller.py  controller_errors.py  controller_exports.py  main_window.py  mini_dock.py  new_case_dialog.py  qt_capture_bridge.py  recorder_bar.py  rewrite_dialog.py  session_dialogs.py  settings_dialog.py  step_detail.py  step_editor.py  step_list.py  style.py  suggestions_panel.py  tray.py  undo_commands.py  verify_dialog.py  verify_progress_dialog.py  welcome.py  widgets.py  workspace.py
inscription/src/inscription/util/: __init__.py  timefmt.py
inscription/tests/: test_app_args.py  test_capture.py  test_capture_capability.py  test_caseguide_link.py  test_config.py  test_export.py  test_friendly_llm_error.py  test_integration.py  test_live_steps.py  test_llm_client.py  test_llm_prompt.py  test_llm_rewriter.py  test_main_window.py  test_paths.py  test_pdf_export.py  test_platform.py  test_render.py  test_repository.py  test_resolve.py  test_schema_migration.py  test_screen.py  test_screenshot_toggle.py  test_scroll_source.py  test_session_sink.py  test_slug.py  test_steps.py  test_storage.py  test_submitted.py  test_suggestions_panel.py  test_undo_commands.py  test_verify.py  test_version.py  test_window_source.py
packaging/: inscription.spec
scripts/: Build-Bundle.ps1  dev.ps1  package-airgapped.ps1  package-airgapped.sh  prepare-bundle.ps1  prepare-bundle.sh  run-all-tests.ps1  run-all-tests.sh
scripts/templates/: Install-Suite.cmd  airgapped-README-linux.txt  airgapped-README.txt  install.ps1  install.sh  start-suite.ps1  start-suite.sh
src/inscription/: __main__.py  config.py  version.py
src/inscription/ui/: __init__.py  main_window.py
suite_common/: pyproject.toml
suite_common/src/suite_common/: __init__.py  bundle.py  coerce.py  llm.py  paths.py
suite_common/src/suite_common/ui/: app_icon.py  llm_settings.py  style.py
suite_common/tests/: test_bundle.py  test_llm.py
tests/: conftest.py  test_config.py  test_main_window.py  test_paths.py  test_version.py
