[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "caseguide"
version = "0.1.0a0"
description = "LLM-assisted exam coach for the Inscription forensic-exam suite."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Silvance" }]
dependencies = [
    "PySide6>=6.7",
    # Shared LLM client + JSON helpers. Editable-installed from the
    # sibling suite_common/ directory; see SETUP.md.
    "suite_common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyinstaller>=6.10",
]

[project.scripts]
caseguide = "caseguide.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/caseguide"]
include = ["src/caseguide/playbook_data/*.json"]

[tool.hatch.build.targets.sdist]
include = ["src/caseguide", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "ANN", "B", "BLE", "C4", "E", "ERA", "F", "FBT", "I", "ICN", "ISC",
    "N", "PERF", "PIE", "PL", "PT", "PTH", "Q", "RET", "RSE", "RUF",
    "S", "SIM", "T20", "TC", "TID", "UP", "W",
]
ignore = [
    "ANN401",
    "FBT001", "FBT002",
    "PLR0913",
    "S101",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PLR2004", "S101", "S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["caseguide"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["PySide6.*", "pytestqt.*", "pyinstaller.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
