[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "inscription"
version = "0.3.0"
description = "Record a Windows workflow, auto-generate a step-by-step guide with screenshots"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Inscription Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Office/Business",
]
dependencies = [
    "PySide6>=6.8,<7",
    "mss>=9.0",
    "pynput>=1.7",
    "psutil>=5.9",
    # Crop + click-marker rendering in the HTML exporter. Keeps the export
    # path Qt-free so it runs without a QApplication.
    "Pillow>=10",
    # UIA element lookup. Windows-only: pulls comtypes/pywin32 transitively,
    # which don't install on non-Windows platforms. On macOS/Linux the
    # resolver falls back to foreground-only (see inscription.resolve).
    'pywinauto>=0.6; sys_platform == "win32"',
    # Shared LLM client + JSON helpers. Editable-installed from the
    # sibling suite_common/ directory; see SETUP.md.
    "suite_common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.11",
    "pyinstaller>=6.10",
]

[project.scripts]
inscription = "inscription.app:main"

[project.gui-scripts]
inscription-gui = "inscription.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inscription"]

# ---------------------------------------------------------------------- Ruff

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "C4",           # comprehensions
    "SIM",          # flake8-simplify
    "RET",          # flake8-return
    "RUF",          # ruff-specific
    "PL",           # pylint
    "PT",           # pytest style
    "TCH",          # type-checking
    "PTH",          # pathlib
    "ERA",          # no commented-out code
]
ignore = [
    "PLR0913",  # too many arguments - Qt APIs often demand this
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"packaging/*.spec" = ["F821"]  # PyInstaller spec files use magic globals

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------- Mypy

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/inscription", "tests"]

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "pytestqt.*",
    "pyinstaller.*",
    "mss.*",
    "pynput.*",
    "psutil.*",
    "pywinauto.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = false
check_untyped_defs = true

# ---------------------------------------------------------------------- Pytest

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
markers = [
    "slow: marks tests as slow",
    "gui: marks tests that require a Qt application",
]

# ---------------------------------------------------------------------- Coverage

[tool.coverage.run]
source = ["src/inscription"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
