[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "suite_common"
version = "0.1.0"
description = "Shared bits for the Inscription suite (LLM client + JSON helpers)."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Silvance" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/suite_common"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
