[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "suite_common"
version = "0.1.0"
description = "Shared bits for the Inscription suite (LLM client + JSON helpers)."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Silvance" }]
dependencies = []

[project.optional-dependencies]
# Pulled by ``suite_common[ui]``; only the GUI apps need PySide6.
# Headless consumers (CLI tools, future server-side helpers) can keep
# the bare suite_common install footprint small.
ui = [
    "pyside6>=6.8,<7",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyside6>=6.8,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/suite_common"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
